@@ -1,3 +1,5 @@
+2010-Apr-27 weaver	evgr/EvrManager now reconfigures on BeginCalibCycle.  Changed acqiris/AcqManager
+			to generate ClearReadout occurrence only once until cleared.
 2010-Apr-14 weaver	Changed InDatagram/Datagram relationship to inheritance rather than contains.
 			Protected EbBase from crashing on late L1Accepts (after Unmap).
 2010-Mar-15 weaver	Tag V01-09-00.  Added traffic shaping to segment levels.
